--- a/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
@@ -14,65 +14,75 @@
         </div>
         <div class="flex justify-center">
             <div class="bg-gray-200 rounded-xl shadow-lg ml-40 mb-20 mt-10 w-3/12 subfont-ubmono">
-                <h1 class="pl-16 pr-20 py-10 text-gray-700 text-4xl">Top Scorers for ___ Difficulty!</h1>
+                <h1 class="pl-16 pr-32 py-10 text-gray-700 text-4xl">Top Scorers of ALL TIME!</h1>
                 <div class="flex flex-col flex-wrap w-20">
-                    <a href="#" class="transform mx-16 px-5 -my-2 py-1 w-30 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full hover:text-white hover:bg-green-500 hover:bg-opacity-100 active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Easy</a><br>
-                    <a href="#" class="transform mx-16 px-5 -my-2 py-1 w-30 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-yellow-500 rounded-full hover:text-white hover:bg-yellow-500 hover:bg-opacity-100 active:bg-opacity-100 active:bg-yellow-600 transition duration-150 ease-in-out">Medium</a><br>
-                    <a href="#" class="transform mx-16 px-5 -my-2 py-1 w-30 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-red-500 rounded-full hover:text-white hover:bg-red-500 hover:bg-opacity-100 active:bg-opacity-100 active:bg-red-600 transition duration-150 ease-in-out">Hard</a><br>
-                    <a href="#" class="transform mx-16 px-5 -my-2 py-1 w-30 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-indigo-500 rounded-full hover:text-white hover:bg-indigo-500 hover:bg-opacity-100 active:bg-opacity-100 active:bg-indigo-600 transition duration-150 ease-in-out">Expert</a>
+                    <a href="../mainapp/index.html" class="transform mx-16 px-5 py-1 w-48 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full hover:text-white hover:bg-green-500 hover:bg-opacity-100 shadow-lg active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Go Back</a><br>
                 </div>
             </div>
-            <div class="bg-white mr-40 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end w-5/12 -ml-20 mb-10 overflow-hidden">
-                <div class="mx-8 mt-8 rounded-t-xl text-center flex col-span-3 border-b-2 border-gray-400">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">1.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
+            <div class="bg-white mr-40 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end w-5/12 -ml-20 mb-10 overflow-hidden" id="below">
+                <div class="mx-8 mt-16 text-center flex-col col-span-3 border-b-2 border-gray-400" id="row">
+                    <span class="hidden" id="data-get">{{ data }}</span>
                 </div>
-                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">2.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
-                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">3.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
-                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">4.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
-                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">5.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
-                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">6.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
-                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">7.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
-                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">8.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
-                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">9.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
-                <div class="mx-8 rounded-b-xl text-center flex col-span-3 bg-gray-200 mb-8">
-                    <h3 class="flex-1 text-3xl py-2 mx-5">10.</h3>
-                    <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
-                </div>
+                <script>
+                    var datalist = document.querySelector('#data-get')
+                    var dataString = datalist.textContent
+                    var data = eval(`[${dataString}]`);
+
+                    var i = 0
+                    while(i < 10) {
+                        var entryDiv = document.createElement('div');
+                        var index = document.createElement('h3');
+                        var nameInput = document.createElement('h3');
+                        var timeDisplay = document.createElement('h3');
+                        var indexText = document.createTextNode(String(i+1) + '.');
+                        var nameInputText = document.createTextNode(data[0][i][0]);
+                        var time = data[0][i][1];
+                        var hours = String(Math.floor(time / 60));
+
+                        if(time % 60 < 10) {
+                            seconds = '0' + String(time % 60)
+                        }
+                        else {
+                            seconds = String(time % 60)
+                        }
+
+                        var timeDisplayText = document.createTextNode(hours + ':' + seconds);
+                        
+                        index.appendChild(indexText);
+                        nameInput.appendChild(nameInputText);
+                        timeDisplay.appendChild(timeDisplayText);
+
+                        index.classList = ('flex-2 text-3xl py-2 mx-5');
+                        nameInput.classList = ('flex-1 text-3xl py-2 mx-5');
+                        timeDisplay.classList = ('flex-2 text-3xl py-2 mx-5');
+
+                        entryDiv.appendChild(index);
+                        entryDiv.appendChild(nameInput);
+                        entryDiv.appendChild(timeDisplay);
+
+                        entryDiv.classList = ('mx-8 text-center flex col-span-3 border-b-2 border-gray-400');
+
+                        if(i % 2) {
+                            entryDiv.classList.add('bg-gray-300')
+                        }
+
+                        if(i == 0) {
+                            entryDiv.classList.add('rounded-t-lg')
+                        }
+                        else if(i == 9) {
+                            entryDiv.classList.remove('border-b-2')
+                            entryDiv.classList.add('rounded-b-lg')
+                            entryDiv.classList.add('mb-16')
+                        }
+                        
+                        var containedIn = document.getElementById("data-get").parentNode
+                        var grab = document.getElementById("data-get")
+
+                        console.log(entryDiv);
+                        containedIn.insertBefore(entryDiv, grab);
+                        i++
+                    }
+                </script>
             </div>
         </div>
     </body>
