--- a/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
@@ -8,19 +8,19 @@
         </title>
         <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
     </head>
-    <body class="bg-gradient-to-b from-teal-300 to-blue-700 select-none">
-        <div class="my-20">
-            <h1 class="mainfont text-6xl text-center text-white bold">LEADERBOARD</h1>
+    <body class="bg-gradient-to-b from-teal-300 to-blue-700">
+        <div class="my-16">
+            <h1 class="mainfont text-6xl text-center text-white bold select-none">LEADERBOARD</h1>
         </div>
         <div class="flex justify-center">
             <div class="bg-gray-200 rounded-xl shadow-lg ml-40 mb-20 mt-10 w-3/12 subfont-ubmono">
                 <h1 class="pl-16 pr-32 py-10 text-gray-700 text-4xl">Top Scorers of ALL TIME!</h1>
-                <div class="flex flex-col flex-wrap w-20">
-                    <a href="../mainapp/index.html" class="transform mx-16 px-5 py-1 w-48 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full hover:text-white hover:bg-green-500 hover:bg-opacity-100 shadow-lg active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Go Back</a><br>
+                <div class="flex flex-col w-20">
+                    <a href="../mainapp/index.html" class="mx-16 px-5 py-1 w-48 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full select-none hover:text-white hover:bg-green-500 hover:bg-opacity-100 shadow-lg active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Go Back</a><br>
                 </div>
             </div>
-            <div class="bg-white mr-40 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end w-5/12 -ml-20 mb-10 overflow-hidden" id="below">
-                <div class="mx-8 mt-16 text-center flex-col col-span-3 border-b-2 border-gray-400" id="row">
+            <div class="bg-white mr-40 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end w-5/12 -ml-20 mb-10" id="below">
+                <div class="mx-8 mt-8 text-center flex-col col-span-3 border-gray-400" id="row">
                     <span class="hidden" id="data-get">{{ data }}</span>
                 </div>
                 <script>
@@ -52,15 +52,15 @@
                         nameInput.appendChild(nameInputText);
                         timeDisplay.appendChild(timeDisplayText);
 
-                        index.classList = ('flex-2 text-3xl py-2 mx-5');
+                        index.classList = ('flex-2 text-3xl py-2 mx-5 subfont-nomono');
                         nameInput.classList = ('flex-1 text-3xl py-2 mx-5');
-                        timeDisplay.classList = ('flex-2 text-3xl py-2 mx-5');
+                        timeDisplay.classList = ('flex-2 text-3xl py-2 mx-5 subfont-nomono');
 
                         entryDiv.appendChild(index);
                         entryDiv.appendChild(nameInput);
                         entryDiv.appendChild(timeDisplay);
 
-                        entryDiv.classList = ('mx-8 text-center flex col-span-3 border-b-2 border-gray-400');
+                        entryDiv.classList = ('text-center flex col-span-3 border-b-2 border-gray-400 shadow-lg');
 
                         if(i % 2) {
                             entryDiv.classList.add('bg-gray-300')
@@ -72,7 +72,7 @@
                         else if(i == 9) {
                             entryDiv.classList.remove('border-b-2')
                             entryDiv.classList.add('rounded-b-lg')
-                            entryDiv.classList.add('mb-16')
+                            entryDiv.classList.add('mb-8')
                         }
                         
                         var containedIn = document.getElementById("data-get").parentNode
