--- a/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
@@ -16,7 +16,7 @@
             <div class="bg-gray-200 rounded-xl shadow-lg ml-40 mb-20 mt-10 w-3/12 subfont-ubmono">
                 <h1 class="pl-16 pr-32 py-10 text-gray-700 text-4xl">Top Scorers of ALL TIME!</h1>
                 <div class="flex flex-col w-20">
-                    <a href="../mainapp/index.html" class="mx-16 px-5 py-1 w-48 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full select-none hover:text-white hover:bg-green-500 hover:bg-opacity-100 shadow-lg active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Go Back</a><br>
+                    <a href="home" class="mx-16 px-5 py-1 w-48 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full select-none hover:text-white hover:bg-green-500 hover:bg-opacity-100 shadow-lg active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Go Back</a><br>
                 </div>
             </div>
             <div class="bg-white mr-40 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end w-5/12 -ml-20 mb-10" id="below">
