--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -9,7 +9,7 @@
 
     <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
 
-        <form id="post-req" class="absolute opacity-0" action="/result" method="GET">
+        <form id="post-req" class="absolute opacity-0" method="GET">
             <input type="text" disabled name="username">
             <input type="text" disabled name="time">
             <input type="submit" value="Submit">
@@ -227,10 +227,17 @@
 
     function post_req(name, time){
         var form = document.getElementById('post-req')
-        form.children[0].value = name
-        form.children[1].value = time
+        var action_url = "/result/"+String(name)+"/"+String(time)
+        form.action = action_url
+        //form.children[0].value = name
+        //form.children[1].value = time
         form.submit()
+    }
 
+    function change_action(){
+        var action_url = "http://localhost:8000/game/result/"+String(name)+"/"+String(time)
+        var form = document.getElementById('post-req')
+        form.action = action_url
     }
 
     function convert_board(board_template){
