Made the page responsive for phone screens
Minor change - linked favicon

--- a/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
@@ -6,20 +6,21 @@
         <title>
             Leaderboard
         </title>
-        <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
+        <link href="{% static 'mainapp/tailwind-output.css' %}" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="{% static 'images/idk.ico' %}" />
     </head>
     <body class="bg-gradient-to-b from-teal-300 to-blue-700">
-        <div class="my-16">
+        <div class="lg:mt-16 sm:mt-40 lg:mb-16 sm:mb-32">
             <h1 class="mainfont text-6xl text-center text-white bold select-none">LEADERBOARD</h1>
         </div>
-        <div class="flex justify-center">
-            <div class="bg-gray-200 rounded-xl shadow-lg ml-40 mb-20 mt-10 w-3/12 subfont-ubmono">
-                <h1 class="pl-16 pr-32 py-10 text-gray-700 text-4xl">Top Scorers of ALL TIME!</h1>
-                <div class="flex flex-col w-20">
-                    <a href="home" class="mx-16 px-5 py-1 w-48 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full select-none hover:text-white hover:bg-green-500 hover:bg-opacity-100 shadow-lg active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Go Back</a><br>
+        <div class="lg:flex sm:grid sm:colspan-1 lg:justify-center">
+            <div class="bg-gray-200 rounded-xl shadow-lg sm:flex-col sm:justify-center lg:ml-40 sm:ml-48 mb-20 mt-10 lg:w-3/12 sm:w-3/5 lg:pb-2 sm:pb-8 subfont-ubmono">
+                <h1 class="pl-8 lg:pr-32 sm:pr-8 lg:py-4 sm:py-8 text-gray-700 text-4xl lg:text-left sm:text-center">Top Scorers of ALL TIME!</h1>
+                <div class="flex flex-col lg:pl-0 sm:pl-6">
+                    <a href="home" class="lg:ml-8 lg:mr-8 sm:ml-48 w-20 py-1 w-40 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full select-none hover:text-white hover:bg-green-500 hover:bg-opacity-100 shadow-lg active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Go Back</a>
                 </div>
             </div>
-            <div class="bg-white mr-40 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end w-5/12 -ml-20 mb-10" id="below">
+            <div class="bg-white lg:mr-40 sm:mr-0 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end lg:w-5/12 sm:w-4/5 lg:-ml-20 sm:ml-0 mb-10 sm:mr-24 lg:mt-0 sm:-mt-24" id="below">
                 <div class="mx-8 mt-8 text-center flex-col col-span-3 border-gray-400" id="row">
                     <span class="hidden" id="data-get">{{ data }}</span>
                 </div>
@@ -52,9 +53,9 @@
                         nameInput.appendChild(nameInputText);
                         timeDisplay.appendChild(timeDisplayText);
 
-                        index.classList = ('flex-2 text-3xl py-2 mx-5 subfont-nomono');
-                        nameInput.classList = ('flex-1 text-3xl py-2 mx-5');
-                        timeDisplay.classList = ('flex-2 text-3xl py-2 mx-5 subfont-nomono');
+                        index.classList = ('flex-2 text-3xl lg:py-2 sm:py-6 mx-5 subfont-nomono');
+                        nameInput.classList = ('flex-1 text-3xl lg:py-2 sm:py-6 mx-5');
+                        timeDisplay.classList = ('flex-2 text-3xl lg:py-2 sm:py-6 mx-5 subfont-nomono');
 
                         entryDiv.appendChild(index);
                         entryDiv.appendChild(nameInput);
@@ -78,7 +79,6 @@
                         var containedIn = document.getElementById("data-get").parentNode
                         var grab = document.getElementById("data-get")
 
-                        console.log(entryDiv);
                         containedIn.insertBefore(entryDiv, grab);
                         i++
                     }
