--- a/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
@@ -7,7 +7,7 @@
             Leaderboard
         </title>
         <link href="{% static 'mainapp/tailwind-output.css' %}" rel="stylesheet" type="text/css">
-        <link rel="shortcut icon" href="{% static 'images/idk.ico' %}" />
+        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
     </head>
     <body class="bg-gradient-to-b from-teal-300 to-blue-700">
         <div class="lg:mt-16 sm:mt-40 lg:mb-16 sm:mb-32">
