Made the card responsive with height and top margin

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -126,7 +126,7 @@
                 <input class="sm:text-md md:text-lg lg:text-2xl xl:text-3xl text-center subfont-cumono focus:bg-blue-200 focus:outline-none" maxlength="1" type="text">
             </div>
         </div>
-        <div class="float-right bg-gray-300 rounded-xl shadow-2xl border-4 w-48 md:w-56 lg:w-64 xl:w-rem20 lg:h-64 xl:h-rem21 mr-10 lg:mr-16 xl:mr-32 mt-32">
+        <div class="float-right bg-gray-300 rounded-xl shadow-2xl border-4 w-48 md:w-56 lg:w-64 xl:w-rem20 lg:h-64 h-48 md:h-64 lg:h-rem20 xl:h-rem21 mr-10 lg:mr-16 xl:mr-32 mt-10 lg:mt-16 xl:mt-32">
             <div class="rounded-lg shadow-md m-4 bg-gray-100 border-2 h-56">
                 <h5 id="Name-headline" class="rounded-lg shadow-md text-2xl text-center subfont-cumono font-bold">NAME</h5>
                 <h5 id="Timer" class="text-2xl text-center mt-5 subfont-cumono">Time Elapsed: <br> 0min 00s</h5>
