--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -126,15 +126,16 @@
                 <input class="sm:text-md md:text-lg lg:text-2xl xl:text-3xl text-center subfont-cumono focus:bg-blue-200 focus:outline-none" maxlength="1" type="text">
             </div>
         </div>
-        <div class="float-right bg-gray-300 rounded-xl shadow-2xl border-4 w-48 md:w-56 lg:w-64 xl:w-rem20 lg:h-64 h-48 md:h-64 lg:h-rem20 xl:h-rem21 mr-10 lg:mr-16 xl:mr-32 mt-10 lg:mt-16 xl:mt-32">
+        <div class="float-right bg-gray-300 rounded-xl shadow-2xl border-4 w-48 md:w-56 lg:w-64 xl:w-rem20 lg:h-64 h-48 md:h-56 lg:h-rem20 xl:h-rem21 mr-10 lg:mr-16 xl:mr-32 mt-10 lg:mt-16 xl:mt-32">
             <div class="rounded-lg shadow-md m-4 bg-gray-100 border-2 h-24 sm:h-32 md:h-36 lg:h-48 xl:h-56">
-                <h5 id="Name-headline" class="rounded-lg shadow-md text-2xl text-center subfont-cumono font-bold">NAME</h5>
-                <h5 id="Timer" class="text-2xl text-center mt-5 subfont-cumono">Time Elapsed: <br> 0min 00s</h5>
-                <button id="Sudoku-button" onclick="SubmitHandle()" class="rounded-lg shadow-md py-1 px-4 mx-20 mt-5 text-2xl border-red-500 hover:border-white hover:bg-red-500 hover:text-white active:bg-red-700 border-2 focus:outline-none subfont-cumono">Submit</button>
+                <h5 id="Name-headline" class="rounded-lg shadow-md text-sm md:text-md lg:text-xl xl:text-2xl text-center subfont-cumono font-bold">NAME</h5>
+                <h5 id="Timer" class="text-sm md:text-md lg:text-xl xl:text-2xl text-center mt-5 subfont-cumono">Time Elapsed: <br> 0min 00s</h5>
+                <button id="Sudoku-button" onclick="SubmitHandle()" class="rounded-lg shadow-md
+                px-1 mx-10 md:mx-16 xl:mx-24 mt-2 lg:mt-4 text-sm lg:text-xl xl:text-2xl border-red-500 hover:border-white hover:bg-red-500 hover:text-white active:bg-red-700 border-2 focus:outline-none subfont-cumono">Submit</button>
             </div>
-            <div class="bg-gray-200 grid grid-cols-2 gap-2 m-4 mt-4 border-2">
-                <a href="#" class="shadow-md rounded-lg py-2 text-center text-1xl border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 subfont-ubmono">Home</a>
-                <a href="#" class="shadow-md rounded-lg py-2 text-center text-1xl border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 subfont-ubmono">LeaderBoard</a>
+            <div class="grid grid-cols-2 gap-2">
+                <a href="#" class="shadow-md rounded-lg md:mt-1 lg:mb-2 md:py-1 text-center text-xs lg:text-lg border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 subfont-ubmono">Home</a>
+                <a href="#" class="shadow-md rounded-lg md:mt-1 lg:mb-2 md:py-1 text-center text-xs lg:text-lg border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 subfont-ubmono">LeaderBoard</a>
             </div>
             <div class="text-center">board id: {{board_id}}</div>
         </div>
