Added favicon to game page

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -5,6 +5,7 @@
     <head>
         <title>Game</title>
         <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" >
     </head>
 
     <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
