Name asking element responsiveness work in progress

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -17,12 +17,12 @@
         </form>
 
         <div id="name-getter-layout" class="absolute bg-black bg-opacity-75 w-screen h-screen">
-            <div class="grid sm:h-1/2 md:h-3/4 grid-rows-2 gap-5 rounded-md border-white border-2 bg-gray-300 text-black w-1/4 m-auto mt-56 animate-fall">
-                <h4 class="relative text-center md:w-3/4 lg:w-full text-md sm:text-lg md:text-xl lg:text-3xl subfont-cumono font-bold">Enter your Name:</h4>
+            <div class="grid grid-rows-2 gap-2 rounded-md border-white border-2 bg-gray-300 text-black w-1/4 m-auto mt-24 animate-fall">
+                <h4 class="relative text-lg subfont-cumono font-bold">Enter your Name:</h4>
 
-                <input id="name-getter" type="text" maxlength="10" placeholder="Enter Name" class="transform sm:scale-50 md:scale-75 lg:scale-95 xl:scale-125 relative border-blue-800 border-4 focus:outline-none text-black text-2xl text-center subfont-cumono rounded-md w-3/4 m-auto">
+                <input id="name-getter" type="text" maxlength="10" placeholder="Enter Name" class="border-blue-800 border-4 focus:outline-none text-black text-md text-center subfont-cumono rounded-md w-24">
 
-                <button id="name-getter-button" onclick="clickhandle()" class="relative rounded-lg shadow-md px-4 mx-20 text-2xl border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 focus:outline-none subfont-cumono">Enter</button>
+                <button id="name-getter-button" onclick="clickhandle()" class="rounded-lg shadow-md px-4 mx-20 text-2xl border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 focus:outline-none subfont-cumono">Enter</button>
             </div>
         </div>
 
