--- a/sudoku-django-project/mainapp/templates/mainapp/index.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/index.html
@@ -4,17 +4,19 @@
 <html>
     <head>
         <title>Sudoku Web</title>
-        <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
+        <link href="/static/mainapp/tailwind-output.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
     </head>
-    <body class="h-24 bg-gradient-to-b from-teal-300 to-blue-700">
-        <div class='transform m-auto animate-fall'>
-            <h2 class="mainfont text-6xl text-center text-white pt-40 bold overflow-hidden m-auto animate-pulse"> SUDOKU </h2>
-        </div>
+    <body class="transform h-32 bg-gradient-to-b from-teal-300 to-blue-700 justify-center">
         
-        <div class="flex flex-col items-center pt-16">
+        <div class="transform m-auto animate-fall overflow-hidden">
+            <h2 class="transform mainfont lg:text-7xl sm:text-10xl text-center text-white lg:pt-40 sm:pt-56 lg:mt-0 sm:mt-64 bold overflow-hidden lg:-ml-12 sm:-mx-10 animate-pulse"> SUDOKU </h2>
+        </div>
 
-            <a href="game" class="transform text-4xl bg-gray-300 active:bg-gray-500 pl-4 pb-1 pr-4 rounded hover:scale-105 shadow-xl opacity-75 hover:opacity-100 subfont-cumono">START GAME</a>
-            <a href="leaderboard/lb" class="transform text-2xl bg-gray-300 active:bg-gray-500 pl-4 pr-4 pt-1 pb-1 mt-6 rounded hover:scale-105 shadow-xl opacity-75 hover:opacity-100 subfont-cumono">LEADER BOARD</a>
+        <div class="flex flex-col items-center lg:mt-32 sm:mt-64">
+
+            <a href="game" class="transform lg:-ml-12 sm:-mx-10 lg:text-5xl sm:text-7xl bg-gray-300 active:bg-gray-500 pl-4 pb-1 pr-4 rounded hover:scale-105 shadow-xl opacity-75 hover:opacity-100 transition-all duration-200 ease-in-out subfont-cumono">START GAME</a>
+            <a href="leaderboard/lb" class="transform lg:-ml-12 sm:-mx-10 lg:text-4xl sm:text-6xl bg-gray-300 active:bg-gray-500 pl-4 pr-4 pt-1 pb-1 mt-6 rounded hover:scale-105 shadow-xl opacity-75 hover:opacity-100 transition-all duration-150 ease-in-out subfont-cumono">LEADERBOARD</a>
 
         </div>
     </body>
