Finished making game page responsive. The name asking box responsiveness isn't perfect, but its there.

--- a/sudoku-django-project/mainapp/templates/mainapp/game.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/game.html
@@ -17,12 +17,12 @@
         </form>
 
         <div id="name-getter-layout" class="absolute bg-black bg-opacity-75 w-screen h-screen">
-            <div class="grid grid-rows-2 gap-2 rounded-md border-white border-2 bg-gray-300 text-black w-1/4 m-auto mt-24 animate-fall">
-                <h4 class="relative text-lg subfont-cumono font-bold">Enter your Name:</h4>
+            <div class="grid grid-rows-2 gap-1 rounded-md bg-gray-300 text-black w-3/12 m-auto mt-40 animate-fall">
+                <h4 class="relative text-sm md:text-lg lg:text-2xl xl:text-3xl subfont-cumono font-bold ml-2">Enter your Name:</h4>
 
-                <input id="name-getter" type="text" maxlength="10" placeholder="Enter Name" class="border-blue-800 border-4 focus:outline-none text-black text-md text-center subfont-cumono rounded-md w-24">
+                <input id="name-getter" type="text" maxlength="10" placeholder="Enter Name" class="border-blue-800 border-2 float-left focus:outline-none text-black text-md lg:text-lg xl:text-xl text-center subfont-cumono rounded-md w-40 md:w-48 mr-3 lg:ml-8 xl:ml-16">
 
-                <button id="name-getter-button" onclick="clickhandle()" class="rounded-lg shadow-md px-4 mx-20 text-2xl border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 focus:outline-none subfont-cumono">Enter</button>
+                <button id="name-getter-button" onclick="clickhandle()" class="rounded-lg shadow-md text-md md:text-lg mx-8 md:mx-12 lg:mx-16 xl:mx-20 border-blue-600 hover:border-white hover:bg-blue-600 hover:text-white active:bg-blue-800 border-2 focus:outline-none subfont-cumono">Enter</button>
             </div>
         </div>
 
