Fixed main page responsiveness

--- a/sudoku-django-project/mainapp/templates/mainapp/index.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/index.html
@@ -9,14 +9,14 @@
     </head>
     <body class="transform h-32 bg-gradient-to-b from-teal-300 to-blue-700 justify-center">
         
-        <div class="transform m-auto animate-fall overflow-hidden">
-            <h2 class="transform mainfont lg:text-7xl sm:text-10xl text-center text-white lg:pt-40 sm:pt-56 lg:mt-0 sm:mt-64 bold overflow-hidden lg:-ml-12 sm:-mx-10 animate-pulse"> SUDOKU </h2>
+        <div class="transform m-auto pt-24 lg:pt-32 animate-fall overflow-hidden">
+            <h2 class="transform mainfont text-center text-4xl sm:text-5xl md:text-6xl xl:text-8xl text-white bold overflow-hidden animate-pulse"> SUDOKU </h2>
         </div>
 
-        <div class="flex flex-col items-center lg:mt-32 sm:mt-64">
+        <div class="flex flex-col items-center pt-10">
 
-            <a href="game" class="transform lg:-ml-12 sm:-mx-10 lg:text-5xl sm:text-7xl bg-gray-300 active:bg-gray-500 pl-4 pb-1 pr-4 rounded hover:scale-105 shadow-xl opacity-75 hover:opacity-100 transition-all duration-200 ease-in-out subfont-cumono">START GAME</a>
-            <a href="leaderboard/lb" class="transform lg:-ml-12 sm:-mx-10 lg:text-4xl sm:text-6xl bg-gray-300 active:bg-gray-500 pl-4 pr-4 pt-1 pb-1 mt-6 rounded hover:scale-105 shadow-xl opacity-75 hover:opacity-100 transition-all duration-150 ease-in-out subfont-cumono">LEADERBOARD</a>
+            <a href="game" class="transform bg-gray-300 active:bg-gray-500 pl-4 pb-1 pr-4 rounded hover:scale-105 shadow-xl opacity-75 hover:opacity-100 transition-all duration-200 ease-in-out subfont-cumono text-sm sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl">START GAME</a>
+            <a href="leaderboard/lb" class="transform bg-gray-300 active:bg-gray-500 pl-4 pr-4 pt-1 pb-1 mt-6 rounded hover:scale-105 shadow-xl opacity-75 hover:opacity-100 transition-all duration-150 ease-in-out subfont-cumono text-sm sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl">LEADERBOARD</a>
 
         </div>
     </body>
